# SchemaGPT

./: LICENSE  README.md  pyproject.toml
examples/: lambo.py
schemagpt/: __init__.py  exceptions.py  main.py  prompts.py  types.py
